{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 457,
  "lineage": "19276359-9a14-f4fa-8561-744c94f999df",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-040d92a70daeeb497",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-198-102-149.compute-1.amazonaws.com",
            "public_ip": "34.198.102.149",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-068d5ad097d884fde",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-213-236-2.compute-1.amazonaws.com",
            "public_ip": "18.213.236.2",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terraform-instance-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0704d5b70985ae44f",
            "domain": "vpc",
            "id": "eipalloc-04af03bb1043804f7",
            "instance": "i-0819d340a94b681b7",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08f4fdd8c23c29bc6",
            "private_dns": "ip-10-205-1-155.ec2.internal",
            "private_ip": "10.205.1.155",
            "public_dns": "ec2-54-225-104-5.compute-1.amazonaws.com",
            "public_ip": "54.225.104.5",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02fe94dee086c0c37",
            "arn": "arn:aws:ec2:us-east-1:559260400130:instance/i-0819d340a94b681b7",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0819d340a94b681b7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keshavakora@yahoo.com",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08f4fdd8c23c29bc6",
            "private_dns": "ip-10-205-1-155.ec2.internal",
            "private_ip": "10.205.1.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ea32e9f655de948e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00812623eb97b3e3d",
            "tags": {
              "Name": "Terraform-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0180955b5a2ca4051"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:559260400130:internet-gateway/igw-004b508328186efc5",
            "id": "igw-004b508328186efc5",
            "owner_id": "559260400130",
            "vpc_id": "vpc-0c3e87268a1859665"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-040d92a70daeeb497",
            "id": "nat-089e87d0c0c240044",
            "network_interface_id": "eni-034e2ae9bbef3bae7",
            "private_ip": "10.0.0.160",
            "public_ip": "34.198.102.149",
            "subnet_id": "subnet-092ab984c7f5772c4"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.default",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-068d5ad097d884fde",
            "id": "nat-04ecc6435a1fe8dc6",
            "network_interface_id": "eni-09407acd44547f8bf",
            "private_ip": "10.0.2.140",
            "public_ip": "18.213.236.2",
            "subnet_id": "subnet-028618c03f5c8a264"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.default",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b3bf37143f1e4eb51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-089e87d0c0c240044",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b3bf37143f1e4eb5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.default",
            "aws_nat_gateway.default",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e95264827c4922a71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04ecc6435a1fe8dc6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e95264827c4922a7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.default",
            "aws_nat_gateway.default",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-004b508328186efc5",
            "id": "r-rtb-01b9f0dbeabc3f1ec1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01b9f0dbeabc3f1ec",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b3bf37143f1e4eb5",
            "owner_id": "559260400130",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-0c3e87268a1859665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e95264827c4922a7",
            "owner_id": "559260400130",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-0c3e87268a1859665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01b9f0dbeabc3f1ec",
            "owner_id": "559260400130",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-0c3e87268a1859665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a32d94d7f0e4572",
            "route_table_id": "rtb-0b3bf37143f1e4eb5",
            "subnet_id": "subnet-0e15b992fbdec6372"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08aa2927ab91df130",
            "route_table_id": "rtb-0e95264827c4922a7",
            "subnet_id": "subnet-069c096793110c389"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032cf1cd0f537f43d",
            "route_table_id": "rtb-01b9f0dbeabc3f1ec",
            "subnet_id": "subnet-092ab984c7f5772c4"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044ba68df12d01eba",
            "route_table_id": "rtb-01b9f0dbeabc3f1ec",
            "subnet_id": "subnet-028618c03f5c8a264"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "My_RDP_Deployment-Only",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:559260400130:security-group/sg-00c947b499abb974d",
            "description": "RDP Deployment Only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c947b499abb974d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "146.196.36.101/32"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "146.196.36.101/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "My_RDP_Deployment-Only",
            "name_prefix": "",
            "owner_id": "559260400130",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0486f43c1b99af680"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:559260400130:subnet/subnet-0e15b992fbdec6372",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e15b992fbdec6372",
            "map_public_ip_on_launch": false,
            "owner_id": "559260400130",
            "vpc_id": "vpc-0c3e87268a1859665"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:559260400130:subnet/subnet-069c096793110c389",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-069c096793110c389",
            "map_public_ip_on_launch": false,
            "owner_id": "559260400130",
            "vpc_id": "vpc-0c3e87268a1859665"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:559260400130:subnet/subnet-092ab984c7f5772c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-092ab984c7f5772c4",
            "map_public_ip_on_launch": true,
            "owner_id": "559260400130",
            "vpc_id": "vpc-0c3e87268a1859665"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:559260400130:subnet/subnet-028618c03f5c8a264",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-028618c03f5c8a264",
            "map_public_ip_on_launch": true,
            "owner_id": "559260400130",
            "vpc_id": "vpc-0c3e87268a1859665"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:559260400130:vpc/vpc-0c3e87268a1859665",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05c82b0f1130ea56f",
            "default_route_table_id": "rtb-03ff5e4cf780e71cb",
            "default_security_group_id": "sg-048946dc14bb32fbb",
            "dhcp_options_id": "dopt-28266352",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c3e87268a1859665",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03ff5e4cf780e71cb",
            "owner_id": "559260400130"
          }
        }
      ]
    }
  ]
}